# ldu-decomposition

./: .gitignore  LICENSE  README.md  benchmark_reader.py  log_reader.py  pyproject.toml  setup.py
ldu_decomposition/: __init__.py  main.c  main.cp312-win_amd64.pyd  main.pyx
tests/: base_test.py  quick_test.py
