[build-system]
requires = ["setuptools", "cython", "numpy", "pandas", "matplotlib", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "ldu-decomposition"
version = "0.1.0"
description = "LDU decomposition with full pivoting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cython",
    "scipy"
]
[tool.setuptools]
packages = ["ldu_decomposition"]